# ppt_assistant

./: .gitignore  LAYOUT_SPECS.md  QUICKSTART.md  README.md  ppt_assistant.py  pyproject.toml  template.pptx
docs/: FORMATTING_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  json_format.md
examples/: example_config.json  output_presentation.pptx
ppt_assistant/: __init__.py  __main__.py  config.py  core.py
ppt_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_import.py
