[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-assistant"
version = "1.0.0"
description = "A powerful Python PPT generation tool that supports reading content from JSON format, applying .pptx templates, and outputting professional presentations containing text, images, tables, and charts."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-pptx>=1.0.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
ppt-assistant = "ppt_assistant:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ppt_assistant*"]

[tool.setuptools.package-data]
ppt_assistant = ["*.md", "*.txt"]